[project]
name = "tsl-crypto"
version = "0.1.0"
description = "TSL-Crypto: Multi-Agent LLM Crypto Trading Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["crypto", "trading", "llm", "multi-agent", "langgraph", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # LLM & Agent orchestration
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langchain-experimental>=0.3.0",
    "langgraph>=0.4.0",
    # Data & analysis
    "pandas>=2.0.0",
    "yfinance>=0.2.31",
    "python-binance>=1.0.19",
    "stockstats>=0.5.4",
    # Embeddings & memory
    "chromadb>=1.0.0",
    # News & social
    "feedparser>=6.0.0",
    "praw>=7.7.0",
    "requests>=2.31.0",
    "parsel>=1.10.0",
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.1",
    # Utilities
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    "setuptools>=68.0.0",
    "pytz>=2024.1",
    "tqdm>=4.65.0",
]

[project.scripts]
tsl-crypto = "cli.main:app"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
